--- a/src/app/@theme/styles/themes.scss
+++ b/src/app/@theme/styles/themes.scss
@@ -8,6 +8,10 @@
   resize: none !important;
 }
 
+body{
+  background-color: #cccccc !important;
+}
+
 .single-line-ellipsis {
   word-break: break-all;
     display: -webkit-box !important;
