--- a/src/app/@view/launch-program/launch-program.component.scss
+++ b/src/app/@view/launch-program/launch-program.component.scss
@@ -15,3 +15,9 @@
 .page-bg{
     background-color: #cbd0e2a1;
 }
+.text-light{
+    color: #7a7b7f !important;
+}
+.mission-name{
+    color: rgb(31, 83, 150);
+}
