--- a/src/app/@view/launch-program/launch-program.component.scss
+++ b/src/app/@view/launch-program/launch-program.component.scss
@@ -1,23 +1,24 @@
-.filter-badge{
-    color: #000;
-    background-color: #a7ceb0de;
+.filter-badge {
+  color: #000;
+  background-color: #a7ceb0de;
 }
-.filter-badge.selected{
-    background-color: #80b727;
+.filter-badge.selected {
+  background-color: #80b727;
 }
 
-.bg-white{
-    background-color: rgba(226, 226, 226, 0.856);
+.bg-white {
+  background-color: rgba(226, 226, 226, 0.856);
 }
-.filter-heading{
-    border-bottom: 2px solid #000;;
+.filter-heading {
+  border-bottom: 2px solid #000;
 }
-.page-bg{
-    background-color: #cbd0e2a1;
+.page-bg {
+  background-color: #cbd0e2a1;
 }
-.text-light{
-    color: #7a7b7f !important;
+.text-light {
+  color: #7a7b7f !important;
 }
-.mission-name{
-    color: rgb(31, 83, 150);
+.mission-name {
+  color: rgb(31, 83, 150);
 }
+
