--- a/src/app/@view/launch-program/launch-program.component.html
+++ b/src/app/@view/launch-program/launch-program.component.html
@@ -46,7 +46,7 @@
 
         </div>
         <div class="col-12 col-md-10 p-0 d-flex flex-wrap">
-            <div *ngFor="let data of launchData; let i = index;" class="col-12 col-md-6 col-lg-3 p-2">
+            <div *ngFor="let data of launchData; let i = index;" class="col-12 col-md-6 col-lg-3 p-2 abc">
                 <div class="bg-white">
                     <div style="height:200px" class="p-3"><img src="{{data?.links?.mission_patch}}" class="image-fit">
                     </div>
