--- a/src/app/@theme/styles/themes.scss
+++ b/src/app/@theme/styles/themes.scss
@@ -14,29 +14,6 @@ body{
 .max-1440{
   max-width: 1440px !important;
 }
-.single-line-ellipsis {
-  word-break: break-all;
-    display: -webkit-box !important;
-    width: 100% !important;
-    -webkit-line-clamp: 1 !important;
-    overflow: hidden !important;
-    -webkit-box-orient: vertical;
-    text-overflow: ellipsis !important;
-}
-.single-line-ellipsis-without-width {
-  -webkit-line-clamp: 1 !important;
-  -webkit-box-orient: vertical !important;
-  overflow: hidden !important;
-  text-overflow: ellipsis !important; 
-}
-.two-line-ellipsis {
-  display: block !important;
-  width: 100% !important;
-  -webkit-line-clamp: 2 !important;
-  -webkit-box-orient: vertical !important;
-  overflow: hidden !important;
-  text-overflow: ellipsis !important;
-}
 
 .image-fit{
   width: 100% !important;
@@ -44,9 +21,7 @@ body{
   object-fit: contain !important;
   background-color: #cccfd9;
 }
-.image-round{
-  border-radius: 50% !important;
-}
+
 .box-shadow{
-  box-shadow: 0px -1px 3px #8a8888 !important;
+  box-shadow: 0 3px 10px #8a8888!important;
 }
