--- a/src/app/@view/launch-program/launch-program.component.html
+++ b/src/app/@view/launch-program/launch-program.component.html
@@ -65,6 +65,12 @@
                     </div>
                 </div>
             </div>
+            <div *ngIf="launchData.length == 0 && !isshowResult"
+            class="col-12 d-flex flex-column align-items-center justify-content-center ">
+            <div class="spinner-border text-secondary" role="status">
+              <span class="sr-only">Loading...</span>
+            </div>
+          </div>
         </div>
     </div>
 </div>
